--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,12 @@
   "dependencies": {
     "angular-ui-calendar": "~0.1.3",
     "momentjs": "~2.4.0",
-    "angular-mocks": "~1.2.26"
+    "angular-mocks": "~1.2.26",
+    "ng-grid": "angular-grid#2.0.7",
+    "angular": "1.2.22",
+    "jquery": "2.0.3"
+  },
+  "resolutions": {
+    "jquery": "2.0.3"
   }
 }
