--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-mocks": "~1.2.26",
     "ng-grid": "angular-grid#2.0.7",
     "angular": "1.2.22",
-    "jquery": "2.0.3"
+    "jquery": "2.0.3",
+    "jquery-ui": "1.10.3"
   },
   "resolutions": {
     "jquery": "2.0.3"
